--- a/phobos/pom.xml
+++ b/phobos/pom.xml
@@ -94,6 +94,11 @@
             <version>0.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.5</version>
+        </dependency>
     </dependencies>
 
     <distributionManagement>
