--- a/phobos/pom.xml
+++ b/phobos/pom.xml
@@ -99,6 +99,12 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.5</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.cryptacular</groupId>
+            <artifactId>cryptacular</artifactId>
+            <version>1.2.0</version>
+        </dependency>
     </dependencies>
 
     <distributionManagement>
