--- a/phobos/pom.xml
+++ b/phobos/pom.xml
@@ -120,11 +120,11 @@
             <artifactId>cryptacular</artifactId>
             <version>1.2.0</version>
         </dependency>
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson-parent</artifactId>
-            <version>2.8.0</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.google.code.gson</groupId>-->
+            <!--<artifactId>gson</artifactId>-->
+            <!--<version>2.8.0</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
