--- a/phobos-internal/pom.xml
+++ b/phobos-internal/pom.xml
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>com.jkys.servicekit</groupId>
             <artifactId>phobos-common</artifactId>
-            <version>${projectVersion}</version>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
