--- a/phobos-internal/pom.xml
+++ b/phobos-internal/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <groupId>com.jkys.servicekit</groupId>
         <artifactId>mars</artifactId>
-        <version>${projectVersion}</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>phobos-internal</artifactId>
-    <version>${projectVersion}</version>
+    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
