--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,11 @@
 
     <groupId>com.jkys.servicekit</groupId>
     <artifactId>mars</artifactId>
-    <version>${projectVersion}</version>
+    <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <properties>
-        <phobos.version>1.0</phobos.version>
         <spring.version>4.3.0.RELEASE</spring.version>
-        <log4j.version>2.6.1</log4j.version>
+        <log4j.version>2.8.1</log4j.version>
     </properties>
     <modules>
         <module>phobos-common</module>
@@ -22,7 +21,7 @@
         <profile>
             <id>snapshots</id>
             <properties>
-                <projectVersion>${phobos.version}-SNAPSHOT</projectVersion>
+                <projectVersion>1.0-SNAPSHOT</projectVersion>
             </properties>
             <distributionManagement>
                 <repository>
@@ -34,7 +33,7 @@
         <profile>
             <id>releases</id>
             <properties>
-                <projectVersion>${phobos.version}</projectVersion>
+                <projectVersion>1.0</projectVersion>
             </properties>
             <distributionManagement>
                 <repository>
